--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -19,3 +19,9 @@ form input, form textarea {
     border-color: rgba(255, 255, 255, 0.1);
     color: #f4f4f4;
 }
+
+.social {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
