--- a/src/components/WorkCard.css
+++ b/src/components/WorkCard.css
@@ -22,8 +22,11 @@
 }
 
 .project-title {
-    color: #fff;
+    color: rebeccapurple;
     padding: 1rem 0;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
 }
 
 .pro-details p{
